
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int O_CREAT ;
 int O_RDONLY ;
 int O_RDWR ;
 int O_TRUNC ;
 int close (int) ;
 int errno ;
 int exit (int ) ;
 int memset (char*,int ,int) ;
 int open (char const*,int) ;
 int perror (char*) ;
 int printf (char*,char const*,char const*) ;
 int read (int,char*,int) ;
 int write (int,char*,int) ;

int cp(const char *from, const char *to, int how)
{
 int in = 0, out = 0, r = 0;
 char buf[1000] = {0};


 printf("cp %s %s\n", from, to);

 if (how == 1)
  how = O_RDWR|O_TRUNC|O_CREAT;
 else
  how = O_RDWR|O_CREAT;

        if ((out = open(to, how)) < 0) {
  perror("open 1");
  exit(errno);
 }
 if ((in = open(from, O_RDONLY)) < 0) {
  perror("open 2");
  exit(errno);
 }
 while ((r = read(in, buf, 1000-1)) > 0) {
  write(out,buf,r);
  memset(buf,0,1000);
 }
 close(in); close(out);
 return 0;
}
